--- a/www/templates/login/change_password.html
+++ b/www/templates/login/change_password.html
@@ -4,11 +4,13 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Nowe hasło</span>
-                    <input name="password" type="password" data-ng-model="user.password" data-ng-minlength="5" required>
+                    <input name="password" type="password" data-ng-model="user.password" data-ng-minlength="5" data-ng-maxlength="32" required>
                 </label>
+                <p style="color: grey;" data-ng-show="form.password.$error.minlength">Wprowadź hasło składające się z minimum 5 znaków.</p>
+                <p style="color: grey;" data-ng-show="form.password.$error.maxlength">Wprowadź hasło składające się z maksymalnie 32 znaków.</p>
                 <label class="item item-input">
                     <span class="input-label">Potwierdź nowe hasło</span>
-                    <input name="confirmPassword" type="password" data-ng-blur="confirmPasswordBlur = true" data-ng-model="user.password2" data-ng-minlength="5" required>
+                    <input name="confirmPassword" type="password" data-ng-blur="confirmPasswordBlur = true" data-ng-model="user.password2" data-ng-minlength="5" data-ng-maxlength="32" data-ng-disabled="form.password.$invalid" required>
                 </label>
                 <p style="color: red;" data-ng-show="user.password!==user.password2 && confirmPasswordBlur">Wprowadź takie same hasła</p>
             </div>
