--- a/www/templates/employees/employees.html
+++ b/www/templates/employees/employees.html
@@ -10,7 +10,8 @@
         <div class="list">
             <div class="row" style="margin-bottom: 5px; border-bottom:solid 1px" data-ng-repeat="employee in employees| filter: query.searchQuery | orderBy: 'surname'">
                 <div class="col">
-                    <img style="height:105px; display:block; margin:auto;" data-ng-src="{{employee.img}}" />
+                    <img style="height:105px; display:block; margin:auto;" data-ng-if="employee.name !== 'Michał' || employee.surname !== 'Pietrzak'" data-ng-src="img/person.jpg" />
+                    <img style="height:105px; display:block; margin:auto;" data-ng-if="employee.name === 'Michał' && employee.surname === 'Pietrzak'" data-ng-src="img/m_pietrzak.jpg" />
                 </div>
                 <div class="col">
                     <p style="font-weight: bold;">{{employee.degree}} {{employee.name}} {{employee.surname}}</p>
