--- a/www/templates/prices/price_details.html
+++ b/www/templates/prices/price_details.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Szczegóły" data-ng-init="loadPriceDetails()">
-    <ion-content class="padding">
+    <ion-content class="padding" data-ng-repeat="priceDetail in priceDetails">
         <div class="card">
             <div class="item item-divider">
                 Opis zabiegu:
