Added change password functionality.

--- a/www/templates/login/change_password.html
+++ b/www/templates/login/change_password.html
@@ -4,19 +4,19 @@
             <div class="list">
                 <label class="item item-input">
                     <span class="input-label">Nowe hasło</span>
-                    <input name="password" type="password" data-ng-model="user.password" data-ng-minlength="5" data-ng-maxlength="32" required>
+                    <input name="password" type="password" data-ng-model="user.password" data-ng-minlength="6" data-ng-maxlength="32" required>
                 </label>
-                <p style="color: grey;" data-ng-show="form.password.$error.minlength">Wprowadź hasło składające się z minimum 5 znaków.</p>
+                <p style="color: grey;" data-ng-show="form.password.$error.minlength">Wprowadź hasło składające się z minimum 6 znaków.</p>
                 <p style="color: grey;" data-ng-show="form.password.$error.maxlength">Wprowadź hasło składające się z maksymalnie 32 znaków.</p>
                 <label class="item item-input">
                     <span class="input-label">Potwierdź nowe hasło</span>
-                    <input name="confirmPassword" type="password" data-ng-blur="confirmPasswordBlur = true" data-ng-model="user.password2" data-ng-minlength="5" data-ng-maxlength="32" data-ng-disabled="form.password.$invalid" required>
+                    <input name="confirmPassword" type="password" data-ng-blur="confirmPasswordBlur = true" data-ng-model="confirmPassword" data-ng-minlength="6" data-ng-maxlength="32" data-ng-disabled="form.password.$invalid" required>
                 </label>
-                <p style="color: red;" data-ng-show="user.password!==user.password2 && confirmPasswordBlur">Wprowadź takie same hasła</p>
+                <p style="color: grey;" data-ng-show="user.password!==confirmPassword && confirmPasswordBlur">Wprowadź takie same hasła.</p>
             </div>
         </form>
         <div class="col text-center">
-            <button style="width: 155px" class="button button-positive" data-ng-click="changePassword()" data-ng-disabled="form.$invalid || user.password!==user.password2">
+            <button style="width: 155px" class="button button-positive" data-ng-click="changePassword()" data-ng-disabled="form.$invalid || user.password!==confirmPassword">
                 Zatwierdź
             </button>
         </div>
