--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -25,7 +25,7 @@
         <div class="row" style="padding-top: 20px">
             <div class="col">
                 <span>Copyright &copy 2015 Michał Pietrzak<br>
-                    Wszystkie prawa zastrzeżone</span>
+                    Wszelkie prawa zastrzeżone</span>
             </div>
         </div>
     </ion-content>
