Some minor changes.

--- a/www/templates/about/about.html
+++ b/www/templates/about/about.html
@@ -7,7 +7,7 @@
     <ion-content class="padding" style="text-align: center;">
         <div class="row">
             <div class="col">
-                <span>Aplikacja mobilna przeznaczona dla pacjentów gabinetu rehabilitacyjnego XYZ, mająca na celu 
+                <span>Aplikacja mobilna przeznaczona dla pacjentów gabinetu rehabilitacyjnego XYZ, mieszczącego się przy ul. Janiszewskiego 11/17 we Wrocławiu. Ma na celu 
                     ułatwienie i usprawnienie korzystania z usług oferowanych przez gabinet.</span>
             </div>
         </div>
