Justified tabs in price details view.

--- a/www/templates/prices/price_details.html
+++ b/www/templates/prices/price_details.html
@@ -4,15 +4,15 @@
             <div class="item item-divider">
                 Opis zabiegu:
             </div>
-            <div class="item item-text-wrap">
+            <div class="item item-text-wrap" align="justify">
                 {{priceDetail.description}}
             </div>
         </div>
         <div class="card">
-            <div class="item item-divider">
+            <div class="item item-divider" >
                 Zalecenia:
             </div>
-            <div class="item item-text-wrap">
+            <div class="item item-text-wrap" align="justify">
                 {{priceDetail.recommendations}}
             </div>
         </div>
@@ -20,7 +20,7 @@
             <div class="item item-divider">
                 Przeciwwskazania:
             </div>
-            <div class="item item-text-wrap">
+            <div class="item item-text-wrap" align="justify">
                 {{priceDetail.contraindications}}
             </div>
         </div>
