--- a/www/templates/prices/prices.html
+++ b/www/templates/prices/prices.html
@@ -13,7 +13,7 @@
         </div>
         <div class="row" data-ng-repeat="price in prices|filter: query.searchQuery |orderBy: 'kindOfTreatment'" style="margin-bottom: 10px; border: 1px solid #dddddd;" data-ui-sref="tab.price-detail({priceId: price.treatmentid})">
             <div class="col col-50" style="display: flex; align-items: center; justify-content: center">{{price.kindoftreatment}}</div>
-            <div class="col col-34" style="display: flex; align-items: center; justify-content: center">{{price.price}} zł/{{price.time}} min</div>
+            <div class="col col-34" style="display: flex; align-items: center; justify-content: center">{{price.price}} zł/{{price.duration}} min</div>
             <i style="display: flex; align-items: center; justify-content: center" class="button button-clear icon-right ion-chevron-right"></i>
         </div>
         <p style="text-align: justify" data-ng-hide="loading">*Powyższe ceny dotyczą usług udzielanych w ramach wizyty prywatnej.</p>
